--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@iconify/react": "^5.0.2",
     "@tanstack/react-query": "^5.59.13",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
